crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_empty_marker_setext_blocked_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..10
  LIST@0..10
    LIST_ITEM@0..8
      LIST_MARKER@0..1 "-"
      PLAIN@1..8
        NEWLINE@1..2 "\n"
        WHITESPACE@2..3 " "
        TEXT@3..7 " foo"
        NEWLINE@7..8 "\n"
    LIST_ITEM@8..10
      LIST_MARKER@8..9 "-"
      PLAIN@9..10
        NEWLINE@9..10 "\n"
