crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_grid_table_continuation_blank_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..75
  LIST@0..75
    LIST_ITEM@0..75
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..14
        TEXT@2..13 "text before"
        NEWLINE@13..14 "\n"
      BLANK_LINE@14..15
        BLANK_LINE@14..15 "\n"
      GRID_TABLE@15..75
        TABLE_SEPARATOR@15..27
          LINE_PREFIX@15..17 "  "
          TABLE_SEP_DELIM@17..18 "+"
          TABLE_SEP_DASHES@18..21 "---"
          TABLE_SEP_DELIM@21..22 "+"
          TABLE_SEP_DASHES@22..25 "---"
          TABLE_SEP_DELIM@25..26 "+"
          NEWLINE@26..27 "\n"
        TABLE_HEADER@27..39
          LINE_PREFIX@27..29 "  "
          TEXT@29..30 "|"
          WHITESPACE@30..31 " "
          TABLE_CELL@31..32
            TEXT@31..32 "a"
          WHITESPACE@32..33 " "
          TEXT@33..34 "|"
          WHITESPACE@34..35 " "
          TABLE_CELL@35..36
            TEXT@35..36 "b"
          WHITESPACE@36..37 " "
          TEXT@37..38 "|"
          NEWLINE@38..39 "\n"
        TABLE_SEPARATOR@39..51
          LINE_PREFIX@39..41 "  "
          TABLE_SEP_DELIM@41..42 "+"
          TABLE_SEP_EQUALS@42..45 "==="
          TABLE_SEP_DELIM@45..46 "+"
          TABLE_SEP_EQUALS@46..49 "==="
          TABLE_SEP_DELIM@49..50 "+"
          NEWLINE@50..51 "\n"
        TABLE_ROW@51..63
          LINE_PREFIX@51..53 "  "
          TEXT@53..54 "|"
          WHITESPACE@54..55 " "
          TABLE_CELL@55..56
            TEXT@55..56 "1"
          WHITESPACE@56..57 " "
          TEXT@57..58 "|"
          WHITESPACE@58..59 " "
          TABLE_CELL@59..60
            TEXT@59..60 "2"
          WHITESPACE@60..61 " "
          TEXT@61..62 "|"
          NEWLINE@62..63 "\n"
        TABLE_SEPARATOR@63..75
          LINE_PREFIX@63..65 "  "
          TABLE_SEP_DELIM@65..66 "+"
          TABLE_SEP_DASHES@66..69 "---"
          TABLE_SEP_DELIM@69..70 "+"
          TABLE_SEP_DASHES@70..73 "---"
          TABLE_SEP_DELIM@73..74 "+"
          NEWLINE@74..75 "\n"
