crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_div_multiline_open_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..33
  LIST@0..33
    LIST_ITEM@0..33
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      HTML_BLOCK_DIV@2..33
        HTML_BLOCK_TAG@2..17
          TEXT@2..6 "<div"
          NEWLINE@6..7 "\n"
          HTML_ATTRS@7..15
            LINE_PREFIX@7..9 "  "
            TEXT@9..13 "id=\""
            ATTR_ID@13..14 "x"
            TEXT@14..15 "\""
          TEXT@15..16 ">"
          NEWLINE@16..17 "\n"
        PARAGRAPH@17..24
          LINE_PREFIX@17..19 "  "
          TEXT@19..23 "body"
          NEWLINE@23..24 "\n"
        HTML_BLOCK_TAG@24..33
          LINE_PREFIX@24..26 "  "
          TEXT@26..32 "</div>"
          NEWLINE@32..33 "\n"
